# claude-agent-api

./: .agent-config.json.example  .dockerignore  .env.example  .gitignore  .mcp-server-config.json  .mcp-server-config.json.example  .prettierignore  .ralph-state.json  AGENT-README.md  API_CURL_EXAMPLES.md  API_ENDPOINTS.md  CLAUDE.md  Dockerfile  ENDPOINT_TEST_REPORT.md  FRONTEND.md  Makefile  README.md  SECURITY-FIX-API-KEY-HASHING.md  WEB_REBOOT.md  alembic.ini.example  comments-grouped.json  components.json  cov_summary.json  coverage.json  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.1code/: worktree.json
.docs/: README-AUDITS.md  api-key-hashing-implementation.md  api-key-hashing-migration.md  api-key-hashing-quick-reference.md  api-test-results.md  audit-summary.md  audit-visual-summary.txt  bff-api-contract-review.md  cicd-devops-assessment-2026-01-10.md  code-review-002-claude-agent-web-2026-01-11.md  code-review-report.md  deployment-log.md  devops-executive-summary.md  devops-quick-wins-checklist.md  documentation-review-2026-01-10.md  documentation-review-summary.md  documentation-review-visual.txt  fixes-summary.md  framework-best-practices-audit.md  quick-wins-checklist.md  security-audit-owasp-2026-01-10.md  security-audit-report.md  services-ports.md  test-coverage-review-002.md  testing-analysis-2026-01-10.md  validation-report-devops-001.md
.docs/reviews/: 2026-01-10-framework-best-practices-review.md
.docs/security/: 2026-02-01-fix-timing-attack-vulnerability.md  timing-attack-fix.md
.docs/sessions/: 2026-01-08-anthropic-api-key-debugging.md  2026-01-08-code-review-fixes.md  2026-01-08-mock-integration-tests.md  2026-01-08-split-request-schemas.md  2026-01-09-cleanup-test-imports.md  2026-01-09-comprehensive-test-suite-overhaul.md  2026-01-09-distributed-sessions-implementation.md  2026-01-09-phase4-python-fastapi-improvements.md  2026-01-09-quick-fixes-implementation.md  2026-01-09-skills-and-slash-commands-implementation.md  2026-01-11-test-fixes-and-approval-implementation.md  2026-01-11-us2-code-review-fixes.md  2026-01-11-us3-refactor-complete.md  2026-01-11-us3-refactor-us4-implementation.md  2026-01-11-us5-refactor-us6-red-phase.md  2026-01-11-us6-git-push-and-completion.md  2026-01-11-us6-mcp-server-management-implementation.md  2026-01-11-us7-session-management-green-implementation.md  2026-01-29-06-23-localhost-test-defaults.md  2026-01-29-06-28-update-db-redis-ports.md  2026-01-29-06-31-fix-local-env-db-redis.md  2026-01-31-15-22-ty-check-fixes.md  2026-01-31-15-30-ruff-check-fixes.md  2026-01-31-15-34-ty-recheck-fixes.md  2026-01-31-16-11-fix-test-failures.md  2026-02-01-14-00-security-fixes.md  2026-02-01-16-50-integration-test-fixes.md  2026-02-01-fix-scan-keys-performance.md  2026-02-02-phase3-api-key-hashing-migration.md
.full-review/: 00-scope.md  01-error-handling-audit.md  01-quality-architecture.md  01a-code-quality.md  01b-architecture.md  02-fixes-summary.md  02-phase2-complete.md  02-security-performance.md  state.json  task5-6-summary.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 20260107_000001_initial_sessions.py  20260110_000002_add_sessions_composite_index.py  20260110_000003_add_session_owner_api_key.py  20260110_000004_add_sessions_owner_api_key_index.py  20260129_000005_add_assistants_api_tables.py  20260201_000006_hash_api_keys.py  20260201_000007_drop_plaintext_api_keys.py  20260207_034903_0c6d1a600bb1_rename_metadata_columns.py  20260208_000007_drop_plaintext_api_keys.py  20260210_170425_9ddfdd63af30_convert_datetime_columns_to_timestamptz.py
apps/api/: __init__.py  config.py  constants.py  dependencies.py  exception_handlers.py  exceptions.py  main.py  protocols.py  types.py
apps/web/: .env.example  .eslintrc.json  .prettierignore  .prettierrc  AI_SDK_CUSTOM_PROVIDER.md  components.json  eslint.config.js  jest.config.js  jest.setup.js  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
docs/: DESIGN-SYSTEM.md  KNOWN_ISSUES.md  api-testing.md  memory.md  performance-analysis-2026-01-10.md  rollback-phase3.md
docs/adr/: 0001-distributed-session-state.md
docs/deployment/: distributed-sessions-migration.md
docs/developer/: di-migration-guide.md
docs/plans/: 2026-01-09-agent-service-orchestrator.md  2026-01-09-perf-001-session-listing-nplus1.md  2026-01-09-perf-002-redis-connection-pool.md  2026-01-09-sec-008-webhook-fail-open-bypass.md  2026-01-09-skills-and-slash-commands.md  2026-01-10-frontend-ai-chat-interface-design.md  2026-02-01-phase-3-drop-plaintext-api-keys.md  2026-02-13-phase2-semantic-tests-design.md  2026-02-13-phase2-semantic-tests.md  platejs.md
docs/sessions/: 2026-02-14-phase2-semantic-tests-completion.md  2026-02-14-phase3-complete-coverage.md
docs/wireframes/: 01-chat-brainstorm-mode.html  02-chat-code-mode.html  03-tool-management-modal.html  04-autocomplete-menu.html  05-tool-approval-and-errors.html  06-mobile-responsive.html  07-command-palette.html  08-platejs-editor.html  09-settings-panel.html  10-loading-empty-states.html  11-dark-mode.html  12-mcp-server-admin.html  13-artifacts-editor.html  14-session-forking.html  15-thinking-subagents.html  16-mcp-connect-flow.html  17-share-modal.html  18-project-picker.html  index.html
scripts/: README.md  chat_with_memory.py  final_test.py  quick_memory_demo.sh  seed_memories.py  test_all_endpoints.py  test_embeddings.py  test_llm_extraction.py  verify_hash_consistency.py
specs/: .current-spec
specs/001-claude-agent-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-claude-agent-web/: ANALYSIS-REPORT.md  SYNTHESIS-REPORT.md  WIREFRAME-VALIDATION.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/agent-orchestration/: .env.example  AGENT-README.md  (+13 more)
tests/: conftest.py
(+568 files in other folders)
