[project]
name = "claude-agent-api"
version = "1.0.0"
description = "HTTP API service wrapping the Claude Agent Python SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "alembic>=1.14.0",
    "slowapi>=0.1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.ruff]
line-length = 88
target-version = "py311"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["apps"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
cache_dir = ".cache/mypy"
plugins = ["pydantic.mypy"]
exclude = [
    "alembic/",
    ".cache/",
]

[[tool.mypy.overrides]]
module = [
    "sse_starlette.*",
    "httpx_sse.*",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Disable pytest-asyncio to avoid event loop conflicts with BaseHTTPMiddleware
# Tests use anyio's async support instead (pytest-anyio from anyio package)
addopts = "-v --tb=short -p no:asyncio -n auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "e2e: End-to-end tests that call real Claude API (slow, expensive)",
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests with mocked Claude API",
]

[tool.coverage.run]
source = ["apps/api"]
branch = true
data_file = ".cache/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "httpx-sse>=0.4.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "types-redis>=4.6.0.20241004",
]
